# backend/api/internal/http/openapi_schemas.generated.json
@@ -928,7 +928,11 @@
         "items": {
           "$ref": "#/components/schemas/RelayRecordWire"
         },
+        "maxItems": 200,
         "type": "array"
+      },
+      "replaceExisting": {
+        "type": "boolean"
       }
     },
     "required": [
@@ -939,7 +943,15 @@
   "RelayRecordsBatchResponse": {
     "additionalProperties": false,
     "properties": {
+      "deleted": {
+        "format": "int64",
+        "type": "integer"
+      },
       "inserted": {
+        "format": "int64",
+        "type": "integer"
+      },
+      "updated": {
         "format": "int64",
         "type": "integer"
       }
